--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonim">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hello, world</title>
 </head>
 
@@ -18,7 +18,7 @@
     <!--jumbotrom-->
     <div class="jumbotron jumbotron-fluide text-center">
         <div class="container">
-            <img src="img/gambar8.jpg.jfif" class="rounded-circle img-thumbnail">
+            <img src="gambar8.jpg.jfif" class="rounded-circle img-thumbnail">
             <h1>mahraifaa</h1>
             <p>Web Developer</p>
         </div>
@@ -74,33 +74,33 @@
 
     <div class="row">
         <div class="col-lg-4">
-            <a href="img/gambar1.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
-                <img src="img/gambar1.jpg.jfif" alt="" class="img-fluid img-thumbnail">
+            <a href="gambar1.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
+                <img src="gambar1.jpg.jfif" alt="" class="img-fluid img-thumbnail">
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="img/gambar2.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
-                <img src="img/gambar2.jpg.jfif" alt="" class="img-fluid img-thumbnail">
+            <a href="gambar2.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
+                <img src="gambar2.jpg.jfif" alt="" class="img-fluid img-thumbnail">
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="img/gambar3.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
-                <img src="img/gambar3.jpg.jfif" alt="" class="img-fluid img-thumbnail">
+            <a href="gambar3.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
+                <img src="gambar3.jpg.jfif" alt="" class="img-fluid img-thumbnail">
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="img/gambar4.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
-                <img src="img/gambar4.jpg.jfif" alt="" class="img-fluid img-thumbnail">
+            <a href="gambar4.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
+                <img src="gambar4.jpg.jfif" alt="" class="img-fluid img-thumbnail">
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="img/gambar5.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
-                <img src="img/gambar5.jpg.jfif" alt="" class="img-fluid img-thumbnail">
+            <a href="gambar5.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
+                <img src="gambar5.jpg.jfif" alt="" class="img-fluid img-thumbnail">
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="img/gambar6.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
-                <img src="img/gambar6.jpg.jfif" alt="" class="img-fluid img-thumbnail">
+            <a href="gambar6.jpg.jfif" data-toggle="lightbox"data-gaallery="example-gallery">
+                <img src="gambar6.jpg.jfif" alt="" class="img-fluid img-thumbnail">
             </a>
         </div>
     </section>
